# bevy_event_modifiers

./: Cargo.toml  README.md  deny.toml
src/: app_ext.rs  lib.rs  modifier.rs  prelude.rs
src/bevy_event_modifiers/: Cargo.toml
src/bevy_event_modifiers/src/: app_ext.rs  context.rs  lib.rs  modifier.rs  system.rs
src/bevy_event_modifiers_macros/: Cargo.toml
src/bevy_event_modifiers_macros/src/: lib.rs
tests/: Cargo.toml
tests/src/: attack_event.rs  hit_event.rs  lib.rs
