[workspace]
resolver = "2"
members = [
    "src/bevy_event_modifiers",
    "src/bevy_event_modifiers_macros",
    "tests",
]

[workspace.dependencies]
bevy_app = { version = "0.14", default-features = false }
bevy_ecs = { version = "0.14", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }
