[workspace]
resolver = "2"
members = [
    "src/bevy_event_modifiers",
    "src/bevy_event_modifiers_macros",
    "tests",
]

[workspace.dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git", tag = "v0.15.0-rc.2", default-features = false }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", tag = "v0.15.0-rc.2", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }
